tests/fail/import_unsafe_extension--ImportError.py
"""Importing non-whitelisted extension modules should fail."""
import thread
